--- a/cloudbuild.staging.yaml
+++ b/cloudbuild.staging.yaml
@@ -27,6 +27,6 @@ steps:
 substitutions:
     _FUNCTION_PROJECT : Stage
     _FUNCTION_NAME    : my-nodejs-app
-    _FUNCTION_REGION  : northamerica-northeast1
+    _FUNCTION_REGION  : europe-west2
     _FUNCTION_RUNTIME : nodejs14
     _ENTRY_POINT      : helloWorld
