--- a/cloudbuild.staging.yaml
+++ b/cloudbuild.staging.yaml
@@ -25,7 +25,7 @@ steps:
   id: DEPLOY
 
 substitutions:
-    _FUNCTION_PROJECT : Stage
+    _FUNCTION_PROJECT : developer-370215
     _FUNCTION_NAME    : my-nodejs-app
     _FUNCTION_REGION  : europe-west2
     _FUNCTION_RUNTIME : nodejs14
